[gd_scene load_steps=14 format=4 uid="uid://dc5e3xk3i347f"]

[ext_resource type="PackedScene" uid="uid://dgy6o2uaitd14" path="res://scenes/levels/abstract_level.tscn" id="1_g4cjb"]
[ext_resource type="Script" path="res://scenes/levels/level_inside/level_inside.gd" id="2_khp1a"]
[ext_resource type="PackedScene" uid="uid://brgutyxjodshe" path="res://scenes/levels/level_inside/cave_exit.tscn" id="3_d0eom"]
[ext_resource type="PackedScene" uid="uid://sul21ma6e0og" path="res://scenes/levels/level_inside/pot.tscn" id="3_g58xe"]
[ext_resource type="Texture2D" uid="uid://c5dg3qykn4l0q" path="res://assets/environment/inside_level/logs.png" id="4_fs5ok"]
[ext_resource type="PackedScene" uid="uid://c4xy0i4h0y3da" path="res://scenes/npc/adjucator.tscn" id="6_6skjq"]
[ext_resource type="PackedScene" uid="uid://b6iiryefnl10w" path="res://scenes/npc/dialogue_detection_area.tscn" id="7_5d7ul"]
[ext_resource type="Texture2D" uid="uid://374srbbeiyd5" path="res://assets/environment/white_orb.png" id="7_kx5t1"]
[ext_resource type="PackedScene" uid="uid://dkrn7lqlxm65d" path="res://scenes/levels/level_inside/pot_display.tscn" id="7_lme0a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ai4dy"]
size = Vector2(261, 394)

[sub_resource type="Animation" id="Animation_i8n74"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/FireLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_yifb2"]
resource_name = "pot_fire_flicker"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/FireLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.35, 0.45, 0.5, 0.6, 0.65, 0.75, 0.85, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.2, 1.0, 0.2, 0.8, 0.3, 1.5, 1.0, 0.6, 0.9, 0.5, 1.7, 0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lights/FireLight2:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.000781238, 0.100781, 0.150781, 0.250781, 0.350781, 0.450781, 0.5, 0.6, 0.65, 0.7, 0.85, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.6, 0.9, 0.5, 1.7, 0.5, 1.2, 1.0, 0.2, 0.8, 0.3, 1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lights/FireLight3:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25, 0.3, 0.35, 0.5, 0.6, 0.65, 0.75, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.7, 0.5, 1.2, 1.0, 0.2, 0.8, 0.3, 1.5, 1.0, 0.6, 0.9, 0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kwdig"]
_data = {
"RESET": SubResource("Animation_i8n74"),
"pot_fire_flicker": SubResource("Animation_yifb2")
}

[node name="InsideLevel" instance=ExtResource("1_g4cjb")]
script = ExtResource("2_khp1a")

[node name="Mountain" parent="Environment" index="0"]
tile_map_data = PackedByteArray("AAD+/wAAAAABAAEAAAD+/wEAAAABAAEAAAD+/wIAAAABAAEAAAD+/wMAAAABAAEAAAD+/wQAAAABAAEAAAD+/wUAAAABAAEAAAD+/wYAAAABAAEAAAD+/wcAAAABAAEAAAD//wAAAAABAAEAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAD//wMAAAABAAEAAAD//wQAAAABAAEAAAD//wUAAAABAAEAAAD//wYAAAABAAEAAAD//wcAAAABAAEAAAAAAAAAAAABAAEAAAAAAAEAAAABAAEAAAAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAAAAAAUAAAABAAEAAAAAAAYAAAABAAEAAAAAAAcAAAABAAEAAAABAAAAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAABAAcAAAABAAEAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAACAAcAAAABAAEAAAADAAAAAAABAAEAAAADAAEAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAYAAAABAAEAAAADAAcAAAABAAEAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAEAAIAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAFAAAAAAABAAEAAAAFAAEAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAGAAAAAAABAAEAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAGAAYAAAABAAEAAAAGAAcAAAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAIAAAAAAABAAEAAAAIAAEAAAABAAEAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAJAAAAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAKAAAAAAABAAEAAAAKAAEAAAABAAEAAAAKAAIAAAABAAEAAAAKAAMAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAABAAEAAAALAAAAAAABAAEAAAALAAEAAAABAAEAAAALAAIAAAABAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAABAAEAAAAMAAAAAAABAAEAAAAMAAEAAAABAAEAAAAMAAIAAAABAAEAAAAMAAMAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAABAAEAAAANAAAAAAABAAEAAAANAAEAAAABAAEAAAANAAIAAAABAAEAAAANAAMAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAABAAEAAAAOAAAAAAABAAEAAAAOAAEAAAABAAEAAAAOAAIAAAABAAEAAAAOAAMAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAABAAEAAAD+//3/AAABAAEAAAD+//7/AAABAAEAAAD+////AAABAAEAAAD///3/AAABAAEAAAD///7/AAABAAEAAAD/////AAABAAEAAAAAAP3/AAABAAEAAAAAAP7/AAABAAEAAAAAAP//AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAEAAAABAP//AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAABAAEAAAACAP//AAABAAEAAAADAP3/AAABAAEAAAADAP7/AAABAAEAAAADAP//AAABAAEAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAEAP//AAABAAEAAAAFAP3/AAABAAEAAAAFAP7/AAABAAEAAAAFAP//AAABAAEAAAAGAP3/AAABAAEAAAAGAP7/AAABAAEAAAAGAP//AAABAAEAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAHAP//AAABAAEAAAAIAP3/AAABAAEAAAAIAP7/AAABAAEAAAAIAP//AAABAAEAAAAJAP3/AAABAAEAAAAJAP7/AAABAAEAAAAJAP//AAABAAEAAAAKAP3/AAABAAEAAAAKAP7/AAABAAEAAAAKAP//AAABAAEAAAALAP3/AAABAAEAAAALAP7/AAABAAEAAAALAP//AAABAAEAAAAMAP3/AAABAAEAAAAMAP7/AAABAAEAAAAMAP//AAABAAEAAAANAP3/AAABAAEAAAANAP7/AAABAAEAAAANAP//AAABAAEAAAAOAP3/AAABAAEAAAAOAP7/AAABAAEAAAAOAP//AAABAAEAAAA=")

[node name="CaveExit" parent="Environment" index="2" instance=ExtResource("3_d0eom")]
position = Vector2(1698, 966)

[node name="Pot" parent="Environment" index="3" instance=ExtResource("3_g58xe")]
position = Vector2(279, 585)

[node name="Logs" type="Sprite2D" parent="Environment" index="4"]
position = Vector2(303, 718)
texture = ExtResource("4_fs5ok")
metadata/_edit_lock_ = true

[node name="Platforms" parent="Environment" index="5"]
tile_map_data = PackedByteArray("AAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAHAAgAAAABAAEAAAAHAAkAAAABAAEAAAAHAAoAAAABAAEAAAAHAAsAAAABAAEAAAAAAAYAAAABAAUAAAAAAAcAAAABAAEAAAAAAAgAAAABAAEAAAAAAAkAAAABAAEAAAAAAAoAAAABAAEAAAAAAAsAAAABAAEAAAAJAAgAAAABAAEAAAAJAAkAAAABAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAEAAAAKAAgAAAALAAAAAAAKAAkAAAABAAEAAAAKAAoAAAABAAEAAAAKAAsAAAABAAEAAAANAAsAAAALAAAAAAAIAAgAAAABAAEAAAACAAoAAAABAAEAAAACAAsAAAABAAEAAAADAAoAAAABAAEAAAADAAsAAAABAAEAAAAEAAoAAAABAAEAAAAEAAsAAAABAAEAAAAFAAoAAAABAAEAAAAFAAsAAAABAAEAAAABAAoAAAABAAEAAAABAAsAAAABAAEAAAAGAAYAAAABAAEAAAAGAAcAAAABAAEAAAAGAAgAAAABAAEAAAAGAAkAAAABAAEAAAAGAAoAAAABAAEAAAAGAAsAAAABAAEAAAAIAAYAAAAJAAoAAAAJAAYAAAALAAoAAAAAAAwAAAABAAEAAAAAAA0AAAABAAEAAAABAAwAAAABAAEAAAABAA0AAAABAAEAAAACAAwAAAABAAEAAAACAA0AAAABAAEAAAADAAwAAAABAAEAAAADAA0AAAABAAEAAAAEAAwAAAABAAEAAAAEAA0AAAABAAEAAAAFAAwAAAABAAEAAAAFAA0AAAABAAEAAAAGAAwAAAABAAEAAAAGAA0AAAABAAEAAAAHAAwAAAABAAEAAAAHAA0AAAABAAEAAAAIAAwAAAABAAEAAAAIAA0AAAABAAEAAAAJAAwAAAABAAEAAAAJAA0AAAABAAEAAAAKAAwAAAABAAEAAAAKAA0AAAABAAEAAAALAAwAAAABAAEAAAALAA0AAAABAAEAAAAMAAwAAAABAAEAAAAMAA0AAAABAAEAAAANAAwAAAABAAEAAAANAA0AAAABAAEAAAAOAAwAAAABAAEAAAAOAA0AAAABAAEAAAAPAAwAAAABAAEAAAAPAA0AAAABAAEAAAAQAAwAAAABAAEAAAAQAA0AAAABAAEAAAARAAwAAAABAAEAAAARAA0AAAABAAEAAAASAAwAAAABAAEAAAASAA0AAAABAAEAAAATAAwAAAABAAEAAAATAA0AAAABAAEAAAAUAAwAAAABAAEAAAAUAA0AAAABAAEAAAAVAAwAAAABAAEAAAAVAA0AAAABAAEAAAAWAAwAAAABAAEAAAAWAA0AAAABAAEAAAAXAAwAAAABAAEAAAAXAA0AAAABAAEAAAAYAAwAAAABAAEAAAAYAA0AAAABAAEAAAAYAA4AAAABAAEAAAAYAA8AAAABAAEAAAAYABAAAAABAAEAAAAZAAwAAAABAAEAAAAZAA0AAAABAAEAAAAZAA4AAAABAAEAAAAZAA8AAAABAAEAAAAZABAAAAABAAEAAAD8/wYAAAABAAEAAAD8/wcAAAABAAEAAAD8/wgAAAABAAEAAAD8/wkAAAABAAEAAAD8/woAAAABAAEAAAD8/wsAAAABAAEAAAD8/wwAAAABAAEAAAD8/w0AAAABAAEAAAD8/w4AAAABAAEAAAD8/w8AAAABAAEAAAD9/wYAAAABAAEAAAD9/wcAAAABAAEAAAD9/wgAAAABAAEAAAD9/wkAAAABAAEAAAD9/woAAAABAAEAAAD9/wsAAAABAAEAAAD9/wwAAAABAAEAAAD9/w0AAAABAAEAAAD9/w4AAAABAAEAAAD9/w8AAAABAAEAAAD+/wYAAAABAAEAAAD+/wcAAAABAAEAAAD+/wgAAAABAAEAAAD+/wkAAAABAAEAAAD+/woAAAABAAEAAAD+/wsAAAABAAEAAAD+/wwAAAABAAEAAAD+/w0AAAABAAEAAAD+/w4AAAABAAEAAAD+/w8AAAABAAEAAAAAAA8AAAABAAEAAAABAA8AAAABAAEAAAACAA8AAAABAAEAAAADAA8AAAABAAEAAAAEAA8AAAABAAEAAAAFAA8AAAABAAEAAAAGAA8AAAABAAEAAAAHAA8AAAABAAEAAAAIAA8AAAABAAEAAAAJAA8AAAABAAEAAAAKAA8AAAABAAEAAAALAA8AAAABAAEAAAAMAA8AAAABAAEAAAANAA8AAAABAAEAAAAOAA8AAAABAAEAAAAPAA8AAAABAAEAAAAQAA8AAAABAAEAAAARAA8AAAABAAEAAAASAA8AAAABAAEAAAATAA8AAAABAAEAAAAUAA8AAAABAAEAAAAVAA8AAAABAAEAAAAWAA8AAAABAAEAAAAXAA8AAAABAAEAAAAAAA4AAAABAAEAAAABAA4AAAABAAEAAAACAA4AAAABAAEAAAADAA4AAAABAAEAAAAEAA4AAAABAAEAAAAFAA4AAAABAAEAAAAGAA4AAAABAAEAAAAHAA4AAAABAAEAAAAIAA4AAAABAAEAAAAJAA4AAAABAAEAAAAKAA4AAAABAAEAAAALAA4AAAABAAEAAAAMAA4AAAABAAEAAAANAA4AAAABAAEAAAAOAA4AAAABAAEAAAAPAA4AAAABAAEAAAAQAA4AAAABAAEAAAARAA4AAAABAAEAAAASAA4AAAABAAEAAAATAA4AAAABAAEAAAAUAA4AAAABAAEAAAAVAA4AAAABAAEAAAAWAA4AAAABAAEAAAAXAA4AAAABAAEAAAD8/xAAAAABAAEAAAD9/xAAAAABAAEAAAD+/xAAAAABAAEAAAD//xAAAAABAAEAAAAAABAAAAABAAEAAAABABAAAAABAAEAAAACABAAAAABAAEAAAADABAAAAABAAEAAAAEABAAAAABAAEAAAAFABAAAAABAAEAAAAGABAAAAABAAEAAAAHABAAAAABAAEAAAAIABAAAAABAAEAAAAJABAAAAABAAEAAAAKABAAAAABAAEAAAALABAAAAABAAEAAAAMABAAAAABAAEAAAANABAAAAABAAEAAAAOABAAAAABAAEAAAAPABAAAAABAAEAAAAQABAAAAABAAEAAAARABAAAAABAAEAAAASABAAAAABAAEAAAATABAAAAABAAEAAAAUABAAAAABAAEAAAAVABAAAAABAAEAAAAWABAAAAABAAEAAAAXABAAAAABAAEAAAAaAAwAAAABAAEAAAAaAA0AAAABAAEAAAAaAA4AAAABAAEAAAAaAA8AAAABAAEAAAAaABAAAAABAAEAAAAbAAwAAAABAAEAAAAbAA0AAAABAAEAAAAbAA4AAAABAAEAAAAbAA8AAAABAAEAAAAbABAAAAABAAEAAAD//wYAAAABAAEAAAD//wcAAAABAAEAAAD//wgAAAABAAEAAAD//wkAAAABAAEAAAD//woAAAABAAEAAAD//wsAAAABAAEAAAD//wwAAAABAAEAAAD//w0AAAABAAEAAAD//w4AAAABAAEAAAD//w8AAAABAAEAAAD8//r/AAABAAEAAAD8//v/AAABAAEAAAD8//z/AAABAAEAAAD8//3/AAABAAEAAAD8//7/AAABAAEAAAD8////AAABAAEAAAD8/wAAAAABAAEAAAD8/wEAAAABAAEAAAD8/wIAAAABAAEAAAD8/wMAAAABAAEAAAD8/wQAAAABAAEAAAD8/wUAAAABAAEAAAD9//r/AAABAAEAAAD+//r/AAABAAEAAAD///r/AAABAAEAAAAAAPr/AAABAAEAAAABAPr/AAABAAEAAAACAPr/AAABAAEAAAADAPr/AAABAAEAAAAEAPr/AAABAAEAAAAFAPr/AAABAAEAAAAGAPr/AAABAAEAAAAHAPr/AAABAAEAAAAIAPr/AAABAAEAAAAJAPr/AAABAAEAAAAKAPr/AAABAAEAAAALAPr/AAABAAEAAAAMAPr/AAABAAEAAAANAPr/AAABAAEAAAAOAPr/AAABAAEAAAAPAPr/AAABAAEAAAAQAPr/AAABAAEAAAARAPr/AAABAAEAAAASAPr/AAABAAEAAAATAPr/AAABAAEAAAAUAPr/AAABAAEAAAAVAPr/AAABAAEAAAAWAPr/AAABAAEAAAAXAPr/AAABAAEAAAAYAPr/AAABAAEAAAAZAPr/AAABAAEAAAAaAPr/AAABAAEAAAAbAPr/AAABAAEAAAAcAPr/AAABAAEAAAAcAPv/AAABAAEAAAAcAPz/AAABAAEAAAAcAP3/AAABAAEAAAAcAP7/AAABAAEAAAAcAP//AAABAAEAAAAcAAAAAAABAAEAAAAcAAEAAAABAAEAAAAcAAIAAAABAAEAAAAcAAMAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAABAAEAAAAcAAYAAAABAAEAAAAcAAcAAAABAAEAAAAcAAgAAAABAAEAAAAcAAkAAAABAAEAAAAcAAoAAAABAAEAAAAcAAsAAAABAAEAAAAcAAwAAAABAAEAAAAcAA0AAAABAAEAAAAcAA4AAAABAAEAAAAcAA8AAAABAAEAAAAcABAAAAABAAEAAAD9//v/AAABAAEAAAD9//z/AAABAAEAAAD9//3/AAABAAEAAAD9//7/AAABAAEAAAD9////AAABAAEAAAD9/wAAAAABAAEAAAD9/wEAAAABAAEAAAD9/wIAAAABAAEAAAD9/wMAAAABAAEAAAD9/wQAAAABAAEAAAD9/wUAAAABAAEAAAD+//v/AAABAAEAAAD+//z/AAABAAEAAAD+//3/AAABAAEAAAD+//7/AAABAAEAAAD+////AAABAAEAAAD+/wAAAAABAAEAAAD+/wEAAAABAAEAAAD+/wIAAAABAAEAAAD+/wMAAAABAAEAAAD+/wQAAAABAAEAAAD+/wUAAAABAAEAAAD///v/AAABAAEAAAD///z/AAABAAEAAAD///3/AAABAAEAAAD///7/AAABAAEAAAD/////AAABAAEAAAD//wAAAAABAAEAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAD//wMAAAABAAEAAAD//wQAAAABAAEAAAD//wUAAAABAAEAAAAAAPv/AAABAAEAAAAAAPz/AAABAAEAAAAAAP3/AAABAAEAAAAAAP7/AAABAAEAAAAAAP//AAABAAEAAAABAPv/AAABAAEAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAEAAAABAP//AAABAAEAAAACAPv/AAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAABAAEAAAACAP//AAABAAEAAAADAPv/AAABAAEAAAADAPz/AAABAAEAAAADAP3/AAABAAEAAAADAP7/AAABAAEAAAADAP//AAABAAEAAAAEAPv/AAABAAEAAAAEAPz/AAABAAEAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAEAP//AAABAAEAAAAFAPv/AAABAAEAAAAFAPz/AAABAAEAAAAFAP3/AAABAAEAAAAFAP7/AAABAAEAAAAFAP//AAABAAEAAAAGAPv/AAABAAEAAAAGAPz/AAABAAEAAAAGAP3/AAABAAEAAAAGAP7/AAABAAEAAAAGAP//AAABAAEAAAAHAPv/AAABAAEAAAAHAPz/AAABAAEAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAHAP//AAABAAEAAAAIAPv/AAABAAEAAAAIAPz/AAABAAEAAAAIAP3/AAABAAEAAAAIAP7/AAABAAEAAAAIAP//AAABAAEAAAAJAPv/AAABAAEAAAAJAPz/AAABAAEAAAAJAP3/AAABAAEAAAAJAP7/AAABAAEAAAAJAP//AAABAAEAAAAKAPv/AAABAAEAAAAKAPz/AAABAAEAAAAKAP3/AAABAAEAAAAKAP7/AAABAAEAAAAKAP//AAABAAEAAAALAPv/AAABAAEAAAALAPz/AAABAAEAAAALAP3/AAABAAEAAAALAP7/AAABAAEAAAALAP//AAABAAEAAAAMAPv/AAABAAEAAAAMAPz/AAABAAEAAAAMAP3/AAABAAEAAAAMAP7/AAABAAEAAAAMAP//AAABAAEAAAANAPv/AAABAAEAAAANAPz/AAABAAEAAAANAP3/AAABAAEAAAANAP7/AAABAAEAAAANAP//AAABAAEAAAAOAPv/AAABAAEAAAAOAPz/AAABAAEAAAAOAP3/AAABAAEAAAAOAP7/AAABAAEAAAAOAP//AAABAAEAAAAPAPv/AAABAAEAAAAPAPz/AAABAAEAAAAPAP3/AAABAAEAAAAPAP7/AAABAAEAAAAPAP//AAABAAEAAAAQAPv/AAABAAEAAAAQAPz/AAABAAEAAAAQAP3/AAABAAEAAAAQAP7/AAABAAEAAAAQAP//AAABAAEAAAARAPv/AAABAAEAAAARAPz/AAABAAEAAAARAP3/AAABAAEAAAARAP7/AAABAAEAAAARAP//AAABAAEAAAASAPv/AAABAAEAAAASAPz/AAABAAEAAAASAP3/AAABAAEAAAASAP7/AAABAAEAAAASAP//AAABAAEAAAATAPv/AAABAAEAAAATAPz/AAABAAEAAAATAP3/AAABAAEAAAATAP7/AAABAAEAAAATAP//AAABAAEAAAAUAPv/AAABAAEAAAAUAPz/AAABAAEAAAAUAP3/AAABAAEAAAAUAP7/AAABAAEAAAAUAP//AAABAAEAAAAVAPv/AAABAAEAAAAVAPz/AAABAAEAAAAVAP3/AAABAAEAAAAVAP7/AAABAAEAAAAVAP//AAABAAEAAAAWAPv/AAABAAEAAAAWAPz/AAABAAEAAAAWAP3/AAABAAEAAAAWAP7/AAABAAEAAAAWAP//AAABAAEAAAAXAPv/AAABAAEAAAAXAPz/AAABAAEAAAAXAP3/AAABAAEAAAAXAP7/AAABAAEAAAAXAP//AAABAAEAAAAYAPv/AAABAAEAAAAYAPz/AAABAAEAAAAYAP3/AAABAAEAAAAYAP7/AAABAAEAAAAYAP//AAABAAEAAAAZAPv/AAABAAEAAAAZAPz/AAABAAEAAAAZAP3/AAABAAEAAAAZAP7/AAABAAEAAAAZAP//AAABAAEAAAAaAPv/AAABAAEAAAAaAPz/AAABAAEAAAAaAP3/AAABAAEAAAAaAP7/AAABAAEAAAAaAP//AAABAAEAAAAbAPv/AAABAAEAAAAbAPz/AAABAAEAAAAbAP3/AAABAAEAAAAbAP7/AAABAAEAAAAbAP//AAABAAEAAAAYAAAAAAABAAEAAAAYAAEAAAABAAEAAAAYAAIAAAABAAEAAAAYAAMAAAABAAEAAAAYAAQAAAABAAEAAAAYAAUAAAABAAEAAAAYAAYAAAABAAEAAAAYAAcAAAABAAEAAAAYAAgAAAABAAEAAAAYAAkAAAABAAEAAAAYAAoAAAABAAEAAAAYAAsAAAABAAEAAAAZAAAAAAABAAEAAAAZAAEAAAABAAEAAAAZAAIAAAABAAEAAAAZAAMAAAABAAEAAAAZAAQAAAABAAEAAAAZAAUAAAABAAEAAAAZAAYAAAABAAEAAAAZAAcAAAABAAEAAAAZAAgAAAABAAEAAAAZAAkAAAABAAEAAAAZAAoAAAABAAEAAAAZAAsAAAABAAEAAAAaAAAAAAABAAEAAAAaAAEAAAABAAEAAAAaAAIAAAABAAEAAAAaAAMAAAABAAEAAAAaAAQAAAABAAEAAAAaAAUAAAABAAEAAAAaAAYAAAABAAEAAAAaAAcAAAABAAEAAAAaAAgAAAABAAEAAAAaAAkAAAABAAEAAAAaAAoAAAABAAEAAAAaAAsAAAABAAEAAAAbAAAAAAABAAEAAAAbAAEAAAABAAEAAAAbAAIAAAABAAEAAAAbAAMAAAABAAEAAAAbAAQAAAABAAEAAAAbAAUAAAABAAEAAAAbAAYAAAABAAEAAAAbAAcAAAABAAEAAAAbAAgAAAABAAEAAAAbAAkAAAABAAEAAAAbAAoAAAABAAEAAAAbAAsAAAABAAEAAAAXAAsAAAACAAUAAAAXAAoAAAACAAUAAAAXAAkAAAACAAUAAAAXAAgAAAACAAUAAAAXAAYAAAACAAUAAAAXAAUAAAAAAAYAAAAXAAAAAAABAAEAAAAXAAEAAAABAAEAAAAXAAIAAAABAAEAAAAXAAMAAAABAAEAAAAXAAQAAAABAAEAAAALAAoAAAAKAAIAAAAAAAAAAAABAAEAAAAAAAEAAAAHAAEAAAABAAAAAAABAAEAAAACAAAAAAABAAEAAAADAAAAAAABAAEAAAAEAAAAAAABAAEAAAAFAAAAAAABAAEAAAAGAAAAAAABAAEAAAAHAAAAAAABAAEAAAAIAAAAAAABAAEAAAAIAAEAAAAHAAMAAAAJAAAAAAABAAEAAAAJAAEAAAAKAAEAAAAKAAAAAAABAAEAAAAKAAEAAAABAAEAAAAKAAIAAAAJAAEAAAALAAAAAAABAAEAAAALAAEAAAABAAEAAAALAAIAAAAMAAQAAAAMAAAAAAABAAEAAAANAAAAAAABAAEAAAAOAAAAAAABAAEAAAAPAAAAAAABAAEAAAAPAAEAAAAAAAYAAAAPAAIAAAAAAAcAAAAQAAAAAAABAAEAAAAQAAEAAAANAAQAAAAQAAIAAAABAAcAAAARAAAAAAABAAEAAAARAAEAAAAHAAMAAAASAAAAAAABAAEAAAASAAEAAAAHAAMAAAATAAAAAAABAAEAAAATAAEAAAAHAAMAAAAUAAAAAAABAAEAAAAUAAEAAAAJAAUAAAAVAAAAAAABAAEAAAAWAAAAAAABAAEAAAAWAAEAAAAAAAYAAAAWAAIAAAAAAAcAAAABAAgAAAABAAQAAAABAAkAAAANAAMAAAACAAkAAAAKAAIAAAADAAkAAAAKAAIAAAAEAAkAAAAKAAIAAAAFAAgAAAAAAAQAAAAFAAkAAAAMAAMAAAACAAEAAAABAAEAAAADAAEAAAABAAYAAAADAAIAAAAJAAUAAAABAAEAAAAAAAcAAAACAAIAAAAEAAgAAAAMAAMAAAAAAAcAAAANAAMAAAABAAcAAAANAAIAAAANAAcAAAANAAEAAAABAAEAAAAOAAEAAAABAAcAAAAMAAEAAAABAAEAAAAMAAIAAAABAAEAAAAAAAUAAAABAAQAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAAEAAgAAAAHAAEAAAANAAQAAAAHAAMAAAABAAcAAAAHAAIAAAADAAUAAAAFAAEAAAAAAAYAAAAFAAIAAAAAAAcAAAAOAAsAAAAMAAAAAAAGAAUAAAAEAAcAAAALAAsAAAABAAEAAAAIAAkAAAABAAEAAAAIAAoAAAABAAEAAAAIAAsAAAABAAEAAAAPAAgAAAABAAoAAAAXAAcAAAACAAUAAAATAAcAAAAAAAoAAAAUAAcAAAABAAoAAAAVAAcAAAACAAoAAAAQAAgAAAABAAoAAAARAAgAAAACAAoAAAALAAgAAAAEAAsAAAAOAAgAAAAAAAoAAAAMAAoAAAAMAAAAAAAMAAsAAAABAAEAAAA=")

[node name="Adjucator" parent="." index="3" instance=ExtResource("6_6skjq")]
position = Vector2(1502, 483)
start_position = Vector2(965, 505)
end_position = Vector2(1620, 381)
movement_time = 5.0
talk_position = Vector2(1502, 483)

[node name="AdjucatorLight" type="PointLight2D" parent="Adjucator" index="3"]
position = Vector2(10, -31)
energy = 0.4
texture = ExtResource("7_kx5t1")
texture_scale = 2.0

[node name="DialogueDetectionArea" parent="." index="4" instance=ExtResource("7_5d7ul")]
position = Vector2(1640, 528)
speaker = "adjucator"

[node name="Player" parent="." index="5"]
position = Vector2(1523, 903)

[node name="PlayerLight" type="PointLight2D" parent="Player" index="9"]
position = Vector2(10, -31)
energy = 0.4
texture = ExtResource("7_kx5t1")
texture_scale = 2.0

[node name="Camera2D" type="Camera2D" parent="." index="9"]
position = Vector2(950, 533)
zoom = Vector2(1.05, 1.05)

[node name="CameraZoom" type="Area2D" parent="." index="10"]
collision_layer = 8
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraZoom" index="0"]
position = Vector2(611.5, 443)
shape = SubResource("RectangleShape2D_ai4dy")

[node name="PotDisplay" parent="." index="11" instance=ExtResource("7_lme0a")]
offset_left = 90.0
offset_top = 350.0
offset_right = 90.0
offset_bottom = 350.0
metadata/_edit_use_anchors_ = true

[node name="Lights" type="Node2D" parent="." index="12"]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Lights" index="0"]
color = Color(0.576471, 0.666667, 0.835294, 1)
energy = 0.8
blend_mode = 1

[node name="PotLight" type="PointLight2D" parent="Lights" index="1"]
position = Vector2(278, 511)
energy = 0.0
texture = ExtResource("7_kx5t1")
texture_scale = 4.0

[node name="FireLight" type="PointLight2D" parent="Lights" index="2"]
position = Vector2(280, 683)
scale = Vector2(0.892797, 0.850921)
color = Color(0.947413, 0.150997, 0, 1)
texture = ExtResource("7_kx5t1")
texture_scale = 1.2

[node name="FireLight2" type="PointLight2D" parent="Lights" index="3"]
position = Vector2(399.127, 689.956)
rotation = -0.816814
scale = Vector2(0.78591, 0.596315)
color = Color(0.947413, 0.150997, 0, 1)
energy = 1.00769
texture = ExtResource("7_kx5t1")
texture_scale = 1.2

[node name="FireLight3" type="PointLight2D" parent="Lights" index="4"]
position = Vector2(168.156, 705.626)
rotation = 0.760964
scale = Vector2(0.638136, 0.482412)
color = Color(0.947413, 0.150997, 0, 1)
energy = 1.7
texture = ExtResource("7_kx5t1")
texture_scale = 1.2

[node name="CaveExitLight" type="PointLight2D" parent="Lights" index="5"]
position = Vector2(1676, 865)
color = Color(0.268047, 0.516885, 0.889973, 1)
energy = 0.9
texture = ExtResource("7_kx5t1")
texture_scale = 3.0
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="13"]
libraries = {
"": SubResource("AnimationLibrary_kwdig")
}
autoplay = "pot_fire_flicker"

[connection signal="ingredient_collected" from="Environment/Pot" to="." method="_on_pot_ingredient_collected"]
[connection signal="ingredient_collected" from="Environment/Pot" to="PotDisplay" method="_on_pot_ingredient_collected"]
[connection signal="body_entered" from="CameraZoom" to="." method="_on_camera_zoom_body_entered"]
[connection signal="body_exited" from="CameraZoom" to="." method="_on_camera_zoom_body_exited"]
